# hakyll-typescript

./: .gitignore  CHANGELOG.md  LICENSE  README.md  hakyll-typescript.cabal  stack.yaml
src/Data/Text/: Internal.hs  JS.hs  TS.hs
src/Hakyll/Typescript/: Internal.hs  JS.hs  TS.hs
tests/: TestSuite.hs
tests/Data/Text/: TestResources.hs
tests/Data/Text/JS/: Tests.hs
tests/Data/Text/TS/: Tests.hs
tests/Hakyll/Typescript/: TestResources.hs
tests/Hakyll/Typescript/JS/: Tests.hs
tests/Hakyll/Typescript/TS/: Tests.hs
tests/resources/: bad.ts  hello_world.js  hello_world.ts
