name:                hakyll-typescript
version:             0.0.1.0
-- synopsis:
-- description:
homepage:            https://github.com/jhmcstanton/hakyll-typescript#readme
license:             BSD3
license-file:        LICENSE
author:              Jim McStanton
maintainer:          jim@jhmcstanton.com
copyright:           2019 Jim McStanton
category:            experimental
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jhmcstanton/hakyll-typescript
